Add parameter ContainerEventLogFile to Run-AlPipeline to extract container event log after run
Add new parameter to Run-TestsInBcContainer - renewClientContextBetweenTests to renew client context between tests
Add new setting renewClientContextBetweenTests as default value for the same parameter in Run-TestsInBcContainer
Change PR process for ContainerHelper

4.0.6
Check latest allowed runtime version in Run-AlValidation
Add PROOF OF CONCEPT PREVIEW functions to work with Business Central NuGet packages: New-BcNuGetPackage, Get-BcNuGetPackage, Push-BcNuGetPackage and New-ALGoNuGetContext
BcContainerHelper is now signed with a Code Signing certificate
Issue #2727 Retry download from direct download URL if CDN download was corrupt
Issue #2718 Add setting NoOfSecondsToSleepAfterPublishBcContainerApp to be able to setup wait time to avoid race condition when publishing some apps to online tenants using Dev Endpoint
AL-Go issue https://github.com/microsoft/AL-Go/issues/228
Issue #2745 Support for Windows 10 22H2
Add parameter TreatTestFailuresAsWarnings to Run-AlPipeline
Add parameter knownApps to Sort-AppFoldersByDependencies, to return all known apps in sorted folders
Issue #2757 Fail early if .flf license file is specified for BC 22 or later containers
AL-Go issue https://github.com/microsoft/AL-Go/issues/259

4.0.5
Issue #2697 Run-AlValidation does not fail validation, but validation fails in Partner Center when submitting the app for NextMajor
New-AppSourceSubmission doesn't work on GitHub hosted runners

4.0.4
Issue #2652 Support Run-AlPipeline with appRevision only
Issue #2704 Wrong package name since today
Change country mappings for countries hosted with Brazil app service
Patch wrong DEMO license file in Business Central 21.0 artifacts

4.0.3
Support for specifying STANDARD or EXTENDED in UploadImportAndApply-ConfigPackageInBcContainer
Issue #2685 Typo in Get-BcArtifactUrl
Issue #2681 New-BcContainerWizard doesn't seem to support Public Preview Versions