@@ -68,6 +68,15 @@ function Wait-BcContainerReady {
             } catch {}
         }
         Write-Host
+
+        Invoke-ScriptInBcContainer -containerName $containerName -scriptblock {
+            $boo = $true
+            while (Get-NAVServerInstance | Get-NavTenant | Where-Object { $_.State -eq "Mounting" }) {
+                if ($boo) { Write-Host "Waiting for tenants to be mounted"; $boo = $false }
+                Start-Sleep -Seconds 1
+            }
+        }
+    
     }
 }
 Set-Alias -Name Wait-NavContainerReady -Value Wait-BcContainerReady
