@@ -5,6 +5,7 @@ Add parameter ContainerEventLogFile to Run-AlPipeline to extract container event
 Add new parameter to Run-TestsInBcContainer - renewClientContextBetweenTests to renew client context between tests
 Add new setting renewClientContextBetweenTests as default value for the same parameter in Run-TestsInBcContainer
 Change PR process for ContainerHelper
+Wait for tenants to be ready after Restart-BcContainer
 
 4.0.6
 Check latest allowed runtime version in Run-AlValidation
